--- a/config_mac.ini
+++ b/config_mac.ini
@@ -1,6 +1,6 @@
 [files]
-output_dir = results/outputfolder
-climate_data_dir = ../climate_data/climatefolder
+output_dir = results/gswp3
+climate_data_dir = ../climate_data/gswp3
 plant_param_dir = plant_params
 fine_dem = data/srtm_1km_world_recalculated.tif
 land_sea_mask = data/worldclim_land_sea_mask.tif
@@ -25,9 +25,14 @@ downscaling_precipitation_bias_threshold = 0.0001
 downscaling_precipitation_per_day_threshold = 0.75
 output_all_limiting_factors = y
 remove_interim_results = y
-remove_downscaled_climate = n
 output_soil_data = y
 multiple_cropping_turnaround_time = 21
+remove_downscaled_climate = n
+rrpcf_interpolation_method = linear
+consider_crop_rotation = y
+simulate_calcification = 0
+resolution = 5
+debug = 1
 
 [extent]
 upper_left_x = -5.0
