--- a/config_win.ini
+++ b/config_win.ini
@@ -1,6 +1,6 @@
 [files]
-output_dir = results\outputfolder
-climate_data_dir = ..\climate_data\climatefolder
+output_dir = results\gswp3
+climate_data_dir = ..\climate_data\gswp3
 plant_param_dir = plant_params
 fine_dem = data\srtm_1km_world_recalculated.tif
 land_sea_mask = data\worldclim_land_sea_mask.tif
@@ -25,9 +25,14 @@ downscaling_precipitation_bias_threshold = 0.0001
 downscaling_precipitation_per_day_threshold = 0.75
 output_all_limiting_factors = y
 remove_interim_results = y
-remove_downscaled_climate = n
 output_soil_data = y
 multiple_cropping_turnaround_time = 21
+remove_downscaled_climate = n
+rrpcf_interpolation_method = linear
+consider_crop_rotation = y
+simulate_calcification = 0
+resolution = 5
+debug = 1
 
 [extent]
 upper_left_x = -5.0
@@ -53,24 +58,24 @@ rel_member_func = base_sat
 [parameters.coarse_fragments]
 data_directory = ..\soilgrids\cfvo
 weighting_method = 2
-weighting_factors = 2.0,1.5,1.0,0.75,0.5,0.25
-conversion_factor = 10.0
+weighting_factors = 2,1.5,1,0.75,0.5,0.25
+conversion_factor = 10
 interpolation_method = 0
 rel_member_func = coarsefragments
 
 [parameters.clay_content]
 data_directory = ..\soilgrids\clay
 weighting_method = 2
-weighting_factors = 2.0,1.5,1.0,0.75,0.5,0.25
-conversion_factor = 10.0
+weighting_factors = 2,1.5,1,0.75,0.5,0.25
+conversion_factor = 10
 interpolation_method = 0
 rel_member_func = texture
 
 [parameters.gypsum]
 data_directory = ..\soilgrids\gyps
 weighting_method = 0
-weighting_factors = 1.0,0.0,0.0,0.0,0.0,0.0
-conversion_factor = 10.0
+weighting_factors = 2,1.5,1,0.75,0.5,0.25
+conversion_factor = 10
 interpolation_method = 0
 rel_member_func = gypsum
 
@@ -85,39 +90,39 @@ rel_member_func = ph
 [parameters.salinity]
 data_directory = ..\soilgrids\sal
 weighting_method = 0
-weighting_factors = 1.0,0.0,0.0,0.0,0.0,0.0
-conversion_factor = 1.0
+weighting_factors = 2,1.5,1,0.75,0.5,0.25
+conversion_factor = 1
 interpolation_method = 0
 rel_member_func = elco
 
 [parameters.sand_content]
 data_directory = ..\soilgrids\sand
 weighting_method = 2
-weighting_factors = 2.0,1.5,1.0,0.75,0.5,0.25
-conversion_factor = 10.0
+weighting_factors = 2,1.5,1,0.75,0.5,0.25
+conversion_factor = 10
 interpolation_method = 0
 rel_member_func = texture
 
 [parameters.soil_organic_carbon]
 data_directory = ..\soilgrids\soc
-weighting_method = 2
-weighting_factors = 2.0,1.5,1.0,0.75,0.5,0.25
-conversion_factor = 100.0
+weighting_method = 1
+weighting_factors = 2,1.5,1,0.75,0.5,0.25
+conversion_factor = 100
 interpolation_method = 0
 rel_member_func = organic_carbon
 
 [parameters.sodicity]
 data_directory = ..\soilgrids\sod
 weighting_method = 0
-weighting_factors = 1.0,0.0,0.0,0.0,0.0,0.0
-conversion_factor = 1.0
+weighting_factors = 2,1.5,1,0.75,0.5,0.25
+conversion_factor = 1
 interpolation_method = 0
 rel_member_func = esp
 
 [parameters.soildepth]
 data_directory = ..\soilgrids\soildepth
 weighting_method = 0
-weighting_factors = 1.0,0.0,0.0,0.0,0.0,0.0
-conversion_factor = 100.0
+weighting_factors = 2,1.5,1,0.75,0.5,0.25
+conversion_factor = 100
 interpolation_method = 0
 rel_member_func = soildepth
