--- a/config_win.ini
+++ b/config_win.ini
@@ -10,7 +10,7 @@ worldclim_temperature_data_dir = data\worldclim_temp
 
 [options]
 use_scheduler = y
-irrigation = 0
+irrigation = n
 precipitation_downscaling_method = 2
 temperature_downscaling_method = 2
 output_format = geotiff
