--- a/config_win.ini
+++ b/config_win.ini
@@ -32,7 +32,7 @@ rrpcf_interpolation_method = linear
 consider_crop_rotation = y
 simulate_calcification = 0
 resolution = 5
-debug = 1
+consider_multiple_cropping = y
 
 [extent]
 upper_left_x = -5.0
@@ -47,40 +47,39 @@ consider_variability = y
 plot_for_each_crop = y
 
 [parameters.base_saturation]
-data_directory = ..\soilgrids\bsat
+data_directory = ../soilgrids/bsat
 weighting_method = 0
 weighting_factors = 1.0,0.0,0.0,0.0,0.0,0.0
 conversion_factor = 1.0
-no_data = -128.0
 interpolation_method = 0
 rel_member_func = base_sat
 
 [parameters.coarse_fragments]
-data_directory = ..\soilgrids\cfvo
+data_directory = ..\soilgrids_250\cfvo
 weighting_method = 2
-weighting_factors = 2,1.5,1,0.75,0.5,0.25
-conversion_factor = 10
+weighting_factors = 2.0,1.5,1.0,0.75,0.5,0.25
+conversion_factor = 10.0
 interpolation_method = 0
 rel_member_func = coarsefragments
 
 [parameters.clay_content]
-data_directory = ..\soilgrids\clay
+data_directory = ..\soilgrids_250\clay
 weighting_method = 2
-weighting_factors = 2,1.5,1,0.75,0.5,0.25
-conversion_factor = 10
+weighting_factors = 2.0,1.5,1.0,0.75,0.5,0.25
+conversion_factor = 10.0
 interpolation_method = 0
 rel_member_func = texture
 
 [parameters.gypsum]
 data_directory = ..\soilgrids\gyps
 weighting_method = 0
-weighting_factors = 2,1.5,1,0.75,0.5,0.25
-conversion_factor = 10
+weighting_factors = 1.0,0.0,0.0,0.0,0.0,0.0
+conversion_factor = 10.0
 interpolation_method = 0
 rel_member_func = gypsum
 
 [parameters.pH]
-data_directory = ..\soilgrids\ph
+data_directory = ..\soilgrids_250\ph
 weighting_method = 2
 weighting_factors = 2.0,1.5,1.0,0.75,0.5,0.25
 conversion_factor = 10.0
@@ -90,39 +89,39 @@ rel_member_func = ph
 [parameters.salinity]
 data_directory = ..\soilgrids\sal
 weighting_method = 0
-weighting_factors = 2,1.5,1,0.75,0.5,0.25
-conversion_factor = 1
+weighting_factors = 1.0,0.0,0.0,0.0,0.0,0.0
+conversion_factor = 1.0
 interpolation_method = 0
 rel_member_func = elco
 
 [parameters.sand_content]
-data_directory = ..\soilgrids\sand
+data_directory = ..\soilgrids_250\sand
 weighting_method = 2
-weighting_factors = 2,1.5,1,0.75,0.5,0.25
-conversion_factor = 10
+weighting_factors = 2.0,1.5,1.0,0.75,0.5,0.25
+conversion_factor = 10.0
 interpolation_method = 0
 rel_member_func = texture
 
 [parameters.soil_organic_carbon]
-data_directory = ..\soilgrids\soc
+data_directory = ..\soilgrids_250\soc
 weighting_method = 1
-weighting_factors = 2,1.5,1,0.75,0.5,0.25
-conversion_factor = 100
+weighting_factors = 1.0,1.0,1.0,0.0,0.0,0.0
+conversion_factor = 100.0
 interpolation_method = 0
 rel_member_func = organic_carbon
 
 [parameters.sodicity]
 data_directory = ..\soilgrids\sod
 weighting_method = 0
-weighting_factors = 2,1.5,1,0.75,0.5,0.25
-conversion_factor = 1
+weighting_factors = 1.0,0.0,0.0,0.0,0.0,0.0
+conversion_factor = 1.0
 interpolation_method = 0
 rel_member_func = esp
 
 [parameters.soildepth]
 data_directory = ..\soilgrids\soildepth
 weighting_method = 0
-weighting_factors = 2,1.5,1,0.75,0.5,0.25
-conversion_factor = 100
+weighting_factors = 1.0,0.0,0.0,0.0,0.0,0.0
+conversion_factor = 100.0
 interpolation_method = 0
 rel_member_func = soildepth
